--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -1,5 +1,5 @@
 .main {
-	width: 100vh;
+	width: 100%;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -7,7 +7,18 @@
 	justify-content: center;
 }
 
+.title {
+	margin-bottom: 220px;
+	font-size: 2.2em;
+}
+
+.files {
+	margin-bottom: 60px;
+	width: 300px;
+	height: 50px;
+}
+
 .btn-primary {
-	width: 200px;
+	width: 300px;
 	height: 50px;
 }
